2010-04-01  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c (boundary):  Tweak auto-placement of plot borders so
	that it is closer to what was used prior to version 4.2.4.  This makes
	the left margin narrower than in 4.4.4 - 4.4.0, and the right margin
	slightly wider.

2010-03-28  Ethan A Merritt  <merritt@u.washington.edu

	* docs/gnuplot.doc: State explicitly that the timefmt %y interprets
	a 2 digit year number as being in the range 1969-2068.

2010-03-24  Ethan A Merritt  <merritt@u.washington.edu

	* term/tgif.trm (text_angle): Handle text rotation -270 same as +90.
	Bugfix

2010-03-23  Guy Mann  <guydmann@gmail.com>

	* term/js/gnuplot_mouse.js (mouse_update):
	Repaint current plot before each incremental update of the zoom box.

2010-03-20  Ethan A Merritt  <merritt@u.washington.edu>

	* PATCHLEVEL: Bump to 4.4.1 and start applying patches added to CVS
	after the code freeze for 4.4.0.  They have now had months of testing.

	* src/win/winmain.c: Allow building with Visual C

	* src/win/wgraph.c: Make font changes take immediate effect

	* src/wxterminal/wxt_gui.cpp src/wxterminal/wxt_term.h term/wxt.trm:
	set term wxt ... {dashed|solid} {dashlength <dl>}

	* term/lua/gnuplot-tikz.lua term/lua.trm: Remove tests for gnuplot
	version 4.3.

	* src/internal.c: Handle integer arithmetic overflow.  If i**j or i*j
	would cause integer overflow, return real number value instead.

	* src/internal.c src/internal.h src/util.c:  Protect against runaway
	recursion by limiting depth of function calls to STACK_DEPTH. 

	* src/graphics.c src/plot2d.c tabulate.c docs/gnuplot.doc:
	Allow an optional 6th column in 'with candlesticks' to specify box width

	* src/tabulate.c src/time.c:
	Support the "%s" format specifier in strftime()

	* src.datafile.c:
	Time format "%s" should apply to both  using 1:2 and using ($1):2.
	Bug #2899511 

	* term/metapost.trm:  Bugfix by Petr Kalinin.
	Fix inheritance of line thickness by text strings.
